--- a/index.html
+++ b/index.html
@@ -148,10 +148,10 @@
                 alt="Banking App"
               />
             </li>
-            <div class="box">
-              <li class="bold">Banking App</li>
-              <li class="text">App</li>
-            </div>
+            <li class="box-unit">
+              <p class="bold">Banking App</p>
+              <p class="text">App</p>
+            </li>
           </ul>
           <ul class="port-ul">
             <li class="img-li">
@@ -161,10 +161,10 @@
                 alt="Cashless Payment"
               />
             </li>
-            <div class="box">
-              <li class="bold">Cashless Payment</li>
-              <li class="text">Marketing</li>
-            </div>
+            <li class="box-unit">
+              <p class="bold">Cashless Payment</p>
+              <p class="text">Marketing</p>
+            </li>
           </ul>
           <ul class="port-ul">
             <li class="img-li">
@@ -174,10 +174,10 @@
                 alt="Meditation App"
               />
             </li>
-            <div class="box">
-              <li class="bold">Meditation App</li>
-              <li class="text">App</li>
-            </div>
+            <li class="box-unit">
+              <p class="bold">Meditation App</p>
+              <p class="text">App</p>
+            </li>
           </ul>
           <ul class="port-ul">
             <li class="img-li">
@@ -187,10 +187,10 @@
                 alt="Banking App"
               />
             </li>
-            <div class="box">
-              <li class="bold">Taxi Service</li>
-              <li class="text">Marketing</li>
-            </div>
+            <li class="box-unit">
+              <p class="bold">Taxi Service</p>
+              <p class="text">Marketing</p>
+            </li>
           </ul>
           <ul class="port-ul">
             <li class="img-li">
@@ -200,10 +200,10 @@
                 alt="Cashless Payment"
               />
             </li>
-            <div class="box">
-              <li class="bold">Screen Illustrations</li>
-              <li class="text">Design</li>
-            </div>
+            <li class="box-unit">
+              <p class="bold">Screen Illustrations</p>
+              <p class="text">Design</p>
+            </li>
           </ul>
           <ul class="port-ul">
             <li class="img-li">
@@ -213,10 +213,10 @@
                 alt="Meditation App"
               />
             </li>
-            <div class="box">
-              <li class="bold">Online Courses</li>
-              <li class="text">Marketing</li>
-            </div>
+            <li class="box-unit">
+              <p class="bold">Online Courses</p>
+              <p class="text">Marketing</p>
+            </li>
           </ul>
         </div>
       </section>
