--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <!--Header Begin-->
-    <header>
+    <header class="starter">
       <!--Top-Left links-->
       <nav class="menu-nav">
         <a class="logo" href="/"><span class="logo-web">WEB</span>STUDIO</a>
