lms validator test

--- a/index.html
+++ b/index.html
@@ -24,25 +24,29 @@
     <!--Header Begin-->
     <header class="starter">
       <!--Top-Left links-->
-      <nav class="menu-nav">
-        <a class="logo" href="/"><span class="logo-web">WEB</span>STUDIO</a>
-        <ul class="menu-nav-ul">
-          <li class="menu-nav-li"><a href="">Studio</a></li>
-          <li class="menu-nav-li"><a href="">Portfolio</a></li>
-          <li class="menu-nav-li"><a class="contacts" href="">Contacts</a></li>
-        </ul>
-      </nav>
-      <!--Top-Right links-->
-      <address class="address-nav">
-        <ul class="address-ul">
-          <li class="address-li">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li class="address-li">
-            <a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
-          </li>
-        </ul>
-      </address>
+      <div class="container menu">
+        <nav class="menu-nav">
+          <a class="logo" href="/"><span class="logo-web">WEB</span>STUDIO</a>
+          <ul class="menu-nav-ul">
+            <li class="menu-nav-li"><a href="">Studio</a></li>
+            <li class="menu-nav-li"><a href="">Portfolio</a></li>
+            <li class="menu-nav-li">
+              <a class="contacts" href="">Contacts</a>
+            </li>
+          </ul>
+        </nav>
+        <!--Top-Right links-->
+        <address class="address-nav">
+          <ul class="address-ul">
+            <li class="address-li">
+              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+            </li>
+            <li class="address-li">
+              <a href="tel:+11(000)111-11-11">+11 (000) 111-11-11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </header>
     <!--Main Begin-->
     <main>
@@ -143,7 +147,7 @@
           <ul class="port-ul">
             <li class="img-li">
               <img
-                class="img-wider"
+                class="img img-wider"
                 src="./images/img-4.jpg"
                 alt="Banking App"
               />
@@ -156,7 +160,7 @@
           <ul class="port-ul">
             <li class="img-li">
               <img
-                class="img-wider"
+                class="img img-wider"
                 src="./images/img-5.jpg"
                 alt="Cashless Payment"
               />
@@ -169,7 +173,7 @@
           <ul class="port-ul">
             <li class="img-li">
               <img
-                class="img-wider"
+                class="img img-wider"
                 src="./images/img-6.jpg"
                 alt="Meditation App"
               />
@@ -182,7 +186,7 @@
           <ul class="port-ul">
             <li class="img-li">
               <img
-                class="img-wider"
+                class="img img-wider"
                 src="./images/img-7.jpg"
                 alt="Banking App"
               />
@@ -195,7 +199,7 @@
           <ul class="port-ul">
             <li class="img-li">
               <img
-                class="img-wider"
+                class="img img-wider"
                 src="./images/img-8.jpg"
                 alt="Cashless Payment"
               />
@@ -208,7 +212,7 @@
           <ul class="port-ul">
             <li class="img-li">
               <img
-                class="img-wider"
+                class="img img-wider"
                 src="./images/img-9.jpg"
                 alt="Meditation App"
               />
@@ -222,7 +226,7 @@
       </section>
     </main>
     <!--Footer begin-->
-    <footer>
+    <footer class="finish">
       <div class="footer-text">
         <a class="logo white" href="/"
           ><span class="logo-web">WEB</span>STUDIO</a
