--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <nav class="menu-nav">
           <a class="logo" href="/"><span class="logo-web">WEB</span>STUDIO</a>
           <ul class="menu-nav-ul">
-            <li class="menu-nav-li"><a href="">Studio</a></li>
-            <li class="menu-nav-li"><a href="">Portfolio</a></li>
-            <li class="menu-nav-li">
+            <li class="menu-nav-list"><a href="">Studio</a></li>
+            <li class="menu-nav-list"><a href="">Portfolio</a></li>
+            <li class="menu-nav-list">
               <a class="contacts" href="">Contacts</a>
             </li>
           </ul>
