--- a/index.html
+++ b/index.html
@@ -28,10 +28,10 @@
         <nav class="menu-nav">
           <a class="logo" href="/"><span class="logo-web">WEB</span>STUDIO</a>
           <ul class="menu-nav-ul">
-            <li class="studio"><a href="">Studio</a></li>
-            <li class="studio"><a href="">Portfolio</a></li>
+            <li class="studio"><a class="studio-link" href="#">Studio</a></li>
+            <li class="studio"><a href="#">Portfolio</a></li>
             <li class="studio">
-              <a class="contacts" href="">Contacts</a>
+              <a class="contacts" href="#">Contacts</a>
             </li>
           </ul>
         </nav>
