--- a/index.html
+++ b/index.html
@@ -29,9 +29,11 @@
           <a class="logo" href="/"><span class="logo-web">WEB</span>STUDIO</a>
           <ul class="menu-nav-ul">
             <li class="studio"><a class="studio-link" href="#">Studio</a></li>
-            <li class="studio"><a href="#">Portfolio</a></li>
             <li class="studio">
-              <a class="contacts" href="#">Contacts</a>
+              <a class="studio-link" href="#">Portfolio</a>
+            </li>
+            <li class="studio">
+              <a class="studio-link" href="#">Contacts</a>
             </li>
           </ul>
         </nav>
