--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
         <nav class="menu-nav">
           <a class="logo" href="/"><span class="logo-web">WEB</span>STUDIO</a>
           <ul class="menu-nav-ul">
-            <li class="studio"><a class="studio-link" href="#">Studio</a></li>
-            <li class="studio">
-              <a class="studio-link" href="#">Portfolio</a>
+            <li class="menu-nav-li"><a class="link" href="#">Studio</a></li>
+            <li class="menu-nav-li">
+              <a class="link" href="#">Portfolio</a>
             </li>
-            <li class="studio">
-              <a class="studio-link" href="#">Contacts</a>
+            <li class="menu-nav-li">
+              <a class="link" href="#">Contacts</a>
             </li>
           </ul>
         </nav>
