section-first test

--- a/index.html
+++ b/index.html
@@ -54,8 +54,10 @@
     <main>
       <!--Section First-->
       <section class="section-first">
-        <h1>Effective Solutions for Your Business</h1>
-        <button type="button">Order Service</button>
+        <div class="container section-first-container">
+          <h1 class="slogan">Effective Solutions for Your Business</h1>
+          <button class="button" type="button">Order Service</button>
+        </div>
       </section>
 
       <!--Section Second-Paragraphs-->
