--- a/index.html
+++ b/index.html
@@ -62,50 +62,52 @@
 
       <!--Section Second-Paragraphs-->
       <section class="section-second">
-        <ul class="parag-ul">
-          <li class="parag-li">
-            <h2>Strategy</h2>
-          </li>
-          <li class="parag-li">
-            <p class="parag">
-              Our goal is to identify the business problem to walk away with the
-              perfect and creative solution.
-            </p>
-          </li>
-        </ul>
-        <ul class="parag-ul">
-          <li class="parag-li">
-            <h2>Punctuality</h2>
-          </li>
-          <li class="parag-li">
-            <p class="parag">
-              Bring the key message to the brand's audience for the best price
-              within the shortest possible time.
-            </p>
-          </li>
-        </ul>
-        <ul class="parag-ul">
-          <li class="parag-li">
-            <h2>Diligence</h2>
-          </li>
-          <li class="parag-li">
-            <p class="parag">
-              Research and confirm brands that present the strongest digital
-              growth opportunities and minimize risk.
-            </p>
-          </li>
-        </ul>
-        <ul class="parag-ul">
-          <li class="parag-li">
-            <h2>Technologies</h2>
-          </li>
-          <li class="parag-li">
-            <p class="parag">
-              Design practice focused on digital experiences. We bring forth a
-              deep passion for problem-solving.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <ul class="parag-ul">
+            <li class="parag-li">
+              <h2 class="visually-hidden">Strategy</h2>
+            </li>
+            <li class="parag-li">
+              <h3 class="parag">
+                Our goal is to identify the business problem to walk away with
+                the perfect and creative solution.
+              </h3>
+            </li>
+          </ul>
+          <ul class="parag-ul">
+            <li class="parag-li">
+              <h2 class="visually-hidden">Punctuality</h2>
+            </li>
+            <li class="parag-li">
+              <h3 class="parag">
+                Bring the key message to the brand's audience for the best price
+                within the shortest possible time.
+              </h3>
+            </li>
+          </ul>
+          <ul class="parag-ul">
+            <li class="parag-li">
+              <h2 class="visually-hidden">Diligence</h2>
+            </li>
+            <li class="parag-li">
+              <h3 class="parag">
+                Research and confirm brands that present the strongest digital
+                growth opportunities and minimize risk.
+              </h3>
+            </li>
+          </ul>
+          <ul class="parag-ul">
+            <li class="parag-li">
+              <h2 class="visually-hidden">Technologies</h2>
+            </li>
+            <li class="parag-li">
+              <h3 class="parag">
+                Design practice focused on digital experiences. We bring forth a
+                deep passion for problem-solving.
+              </h3>
+            </li>
+          </ul>
+        </div>
       </section>
 
       <!--Section Third-Team-->
