--- a/index.html
+++ b/index.html
@@ -63,48 +63,38 @@
       <!--Section Second-Paragraphs-->
       <section class="section-second">
         <div class="container">
+          <h2 class="visually-hidden">feature</h2>
           <ul class="parag-ul">
             <li class="parag-li">
-              <h2 class="visually-hidden">Strategy</h2>
-            </li>
-            <li class="parag-li">
-              <h3 class="parag">
+              <h3 class="parag-li-h3">Strategy</h3>
+              <p class="parag">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
-              </h3>
+              </p>
             </li>
-          </ul>
-          <ul class="parag-ul">
+
             <li class="parag-li">
-              <h2 class="visually-hidden">Punctuality</h2>
-            </li>
-            <li class="parag-li">
-              <h3 class="parag">
+              <h3 class="parag-li-h3">Punctuality</h3>
+              <p class="parag">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
-              </h3>
+              </p>
             </li>
-          </ul>
-          <ul class="parag-ul">
+
             <li class="parag-li">
-              <h2 class="visually-hidden">Diligence</h2>
-            </li>
-            <li class="parag-li">
-              <h3 class="parag">
+              <h3 class="parag-li-h3">Diligence</h3>
+              <p class="parag">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
-              </h3>
+              </p>
             </li>
-          </ul>
-          <ul class="parag-ul">
+
             <li class="parag-li">
-              <h2 class="visually-hidden">Technologies</h2>
-            </li>
-            <li class="parag-li">
-              <h3 class="parag">
+              <h3 class="parag-li-h3">Technologies</h3>
+              <p class="parag">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
-              </h3>
+              </p>
             </li>
           </ul>
         </div>
