--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           <h2 class="visually-hidden">feature</h2>
           <ul class="parag-ul">
             <li class="parag-li">
-              <h3 class="parag-li-h3">Strategy</h3>
+              <h3 class="parag-title">Strategy</h3>
               <p class="parag">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
@@ -74,7 +74,7 @@
             </li>
 
             <li class="parag-li">
-              <h3 class="parag-li-h3">Punctuality</h3>
+              <h3 class="parag-title">Punctuality</h3>
               <p class="parag">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
@@ -82,7 +82,7 @@
             </li>
 
             <li class="parag-li">
-              <h3 class="parag-li-h3">Diligence</h3>
+              <h3 class="parag-title">Diligence</h3>
               <p class="parag">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
@@ -90,7 +90,7 @@
             </li>
 
             <li class="parag-li">
-              <h3 class="parag-li-h3">Technologies</h3>
+              <h3 class="parag-title">Technologies</h3>
               <p class="parag">
                 Design practice focused on digital experiences. We bring forth a
                 deep passion for problem-solving.
