--- a/index.html
+++ b/index.html
@@ -102,35 +102,40 @@
 
       <!--Section Third-Team-->
       <section class="section-third">
-        <h2 class="title-team">Our Team</h2>
         <div class="container">
+          <h2 class="title-team">Our Team</h2>
           <ul class="team-ul">
-            <li>
+            <li class="team-li">
               <img class="img" src="./images/img-3.jpg" alt="Mark Photo" />
+              <div class="intro">
+                <h3 class="bold">Mark Guerrero</h3>
+                <p class="text">Product Designer</p>
+              </div>
             </li>
-            <li class="bold">Mark Guerrero</li>
-            <li class="text">Product Designer</li>
-          </ul>
-          <ul class="team-ul">
-            <li>
+
+            <li class="team-li">
               <img class="img" src="./images/img-2.jpg" alt="Tom Photo" />
+              <div class="intro">
+                <h3 class="bold">Tom Ford</h3>
+                <p class="text">Frontend Developer</p>
+              </div>
             </li>
-            <li class="bold">Tom Ford</li>
-            <li class="text">Frontend Developer</li>
-          </ul>
-          <ul class="team-ul">
-            <li>
+
+            <li class="team-li">
               <img class="img" src="./images/img-1.jpg" alt="Camila Photo" />
+              <div class="intro">
+                <h3 class="bold">Camila Garcia</h3>
+                <p class="text">Marketing</p>
+              </div>
             </li>
-            <li class="bold">Camila Garcia</li>
-            <li class="text">Marketing</li>
-          </ul>
-          <ul class="team-ul">
-            <li>
+
+            <li class="team-li">
               <img class="img" src="./images/img.jpg" alt="Daniel Photo" />
+              <div class="intro">
+                <h3 class="bold">Daniel Wilson</h3>
+                <p class="text">UI Designer</p>
+              </div>
             </li>
-            <li class="bold">Daniel Wilson</li>
-            <li class="text">UI Designer</li>
           </ul>
         </div>
       </section>
