--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 
       <!--Section Third-Team-->
       <section class="section-third">
-        <div class="container">
+        <div class="container section-third-container">
           <h2 class="title-team">Our Team</h2>
           <ul class="team-ul">
             <li class="team-li">
