--- a/index.html
+++ b/index.html
@@ -143,8 +143,9 @@
       <!--Section Fourth-Portfolio-->
 
       <section class="section-fourth">
-        <h2 class="title-portfolio">Our Portfolio</h2>
-        <div class="container">
+        <div class="container section-fourth-container">
+          <h2 class="title-portfolio">Our Portfolio</h2>
+
           <ul class="port-ul">
             <li class="img-li">
               <img
@@ -152,74 +153,59 @@
                 src="./images/img-4.jpg"
                 alt="Banking App"
               />
-            </li>
-            <li class="box-unit">
-              <p class="bold">Banking App</p>
+              <h3 class="bold">Banking App</h3>
               <p class="text">App</p>
             </li>
-          </ul>
-          <ul class="port-ul">
+
             <li class="img-li">
               <img
                 class="img img-wider"
                 src="./images/img-5.jpg"
                 alt="Cashless Payment"
               />
-            </li>
-            <li class="box-unit">
-              <p class="bold">Cashless Payment</p>
+              <h3 class="bold">Cashless Payment</h3>
               <p class="text">Marketing</p>
             </li>
-          </ul>
-          <ul class="port-ul">
+
             <li class="img-li">
               <img
                 class="img img-wider"
                 src="./images/img-6.jpg"
                 alt="Meditation App"
               />
-            </li>
-            <li class="box-unit">
-              <p class="bold">Meditation App</p>
+              <h3 class="bold">Meditation App</h3>
               <p class="text">App</p>
             </li>
-          </ul>
-          <ul class="port-ul">
+
             <li class="img-li">
               <img
                 class="img img-wider"
                 src="./images/img-7.jpg"
                 alt="Banking App"
               />
-            </li>
-            <li class="box-unit">
-              <p class="bold">Taxi Service</p>
+
+              <h3 class="bold">Taxi Service</h3>
               <p class="text">Marketing</p>
             </li>
-          </ul>
-          <ul class="port-ul">
+
             <li class="img-li">
               <img
                 class="img img-wider"
                 src="./images/img-8.jpg"
                 alt="Cashless Payment"
               />
-            </li>
-            <li class="box-unit">
-              <p class="bold">Screen Illustrations</p>
+
+              <h3 class="bold">Screen Illustrations</h3>
               <p class="text">Design</p>
             </li>
-          </ul>
-          <ul class="port-ul">
+
             <li class="img-li">
               <img
                 class="img img-wider"
                 src="./images/img-9.jpg"
                 alt="Meditation App"
               />
-            </li>
-            <li class="box-unit">
-              <p class="bold">Online Courses</p>
+              <h3 class="bold">Online Courses</h3>
               <p class="text">Marketing</p>
             </li>
           </ul>
