--- a/index.html
+++ b/index.html
@@ -153,8 +153,10 @@
                 src="./images/img-4.jpg"
                 alt="Banking App"
               />
-              <h3 class="bold">Banking App</h3>
-              <p class="text">App</p>
+              <div class="intro-box">
+                <h3 class="bold">Banking App</h3>
+                <p class="text">App</p>
+              </div>
             </li>
 
             <li class="img-li">
@@ -163,8 +165,10 @@
                 src="./images/img-5.jpg"
                 alt="Cashless Payment"
               />
-              <h3 class="bold">Cashless Payment</h3>
-              <p class="text">Marketing</p>
+              <div class="intro-box">
+                <h3 class="bold">Cashless Payment</h3>
+                <p class="text">Marketing</p>
+              </div>
             </li>
 
             <li class="img-li">
@@ -173,8 +177,10 @@
                 src="./images/img-6.jpg"
                 alt="Meditation App"
               />
-              <h3 class="bold">Meditation App</h3>
-              <p class="text">App</p>
+              <div class="intro-box">
+                <h3 class="bold">Meditation App</h3>
+                <p class="text">App</p>
+              </div>
             </li>
 
             <li class="img-li">
@@ -183,9 +189,10 @@
                 src="./images/img-7.jpg"
                 alt="Banking App"
               />
-
-              <h3 class="bold">Taxi Service</h3>
-              <p class="text">Marketing</p>
+              <div class="intro-box">
+                <h3 class="bold">Taxi Service</h3>
+                <p class="text">Marketing</p>
+              </div>
             </li>
 
             <li class="img-li">
@@ -194,9 +201,10 @@
                 src="./images/img-8.jpg"
                 alt="Cashless Payment"
               />
-
-              <h3 class="bold">Screen Illustrations</h3>
-              <p class="text">Design</p>
+              <div class="intro-box">
+                <h3 class="bold">Screen Illustrations</h3>
+                <p class="text">Design</p>
+              </div>
             </li>
 
             <li class="img-li">
@@ -205,20 +213,22 @@
                 src="./images/img-9.jpg"
                 alt="Meditation App"
               />
-              <h3 class="bold">Online Courses</h3>
-              <p class="text">Marketing</p>
+              <div class="intro-box">
+                <h3 class="bold">Online Courses</h3>
+                <p class="text">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
       </section>
     </main>
     <!--Footer begin-->
-    <footer class="finish">
-      <div class="footer-text">
+    <footer class="finisher">
+      <div class="container footer-container">
         <a class="logo white" href="/"
           ><span class="logo-web">WEB</span>STUDIO</a
         >
-        <p>
+        <p class="footer-text">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
