--- a/index.html
+++ b/index.html
@@ -225,9 +225,7 @@
     <!--Footer begin-->
     <footer class="finisher">
       <div class="container footer-container">
-        <a class="logo white" href="/"
-          ><span class="logo-web">WEB</span>STUDIO</a
-        >
+        <a class="white" href="/"><span class="logo-web">WEB</span>STUDIO</a>
         <p class="footer-text">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
