--- a/index.html
+++ b/index.html
@@ -223,10 +223,12 @@
       </section>
     </main>
     <!--Footer begin-->
-    <footer class="finisher">
-      <div class="container footer-container">
-        <a class="white" href="/"><span class="logo-web">WEB</span>STUDIO</a>
-        <p class="footer-text">
+    <footer class="finish">
+      <div class="container">
+        <a class="logo-footer" href="/"
+          >WEB<span class="logo-web">STUDIO</span></a
+        >
+        <p class="text-footer">
           Increase the flow of customers and sales for your business with
           digital marketing & growth solutions.
         </p>
